Fixed overflow in list items

--- a/public/global.css
+++ b/public/global.css
@@ -28,6 +28,7 @@ html,
 body {
   width: 100%;
   /* height: 100%; */
+  overflow-x: hidden;
 }
 
 html {
